src/objects/Issue__c.object
<CustomObject>
    <fields>
        <fullName>Change_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ETC__c</fullName>
        <inlineHelpText>Estimate to Complete</inlineHelpText>
        <label>ETC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Programs</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Quarterly Summaries</fullName>
                </value>
                <value>
                    <fullName>Program Years</fullName>
                </value>
                <value>
                    <fullName>Transactions</fullName>
                </value>
                <value>
                    <fullName>MSA Generation</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Products/Pricing</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Workflow Rule</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Bug_CR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicate the bug/cr for which this is a duplicate.</inlineHelpText>
        <label>Parent Bug/CR</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Related Issues</relationshipLabel>
        <relationshipName>Bugs_CRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority_Order__c</fullName>
        <label>Priority Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Within category (Bug, CR), what is the priority of this item for implementation?</description>
        <inlineHelpText>Within category (Bug, CR), what is the priority of this item for implementation?</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Record__c</fullName>
        <inlineHelpText>Enter the salesforce URL or a specific name/identifier for the erroring record.</inlineHelpText>
        <label>Sample Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Need More Information</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Working on it</fullName>
                </value>
                <value>
                    <fullName>Corrected in SANDBOX- pending confirmation</fullName>
                </value>
                <value>
                    <fullName>Fixed, Pending Rollout to Production</fullName>
                </value>
                <value>
                    <fullName>Corrected in PRODUCTION- Pending Confirmation</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Not a Bug - working as designed</fullName>
                </value>
                <value>
                    <fullName>Failed Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bug</fullName>
                    <default>true</default>
                    <label>Bug</label>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Action Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>Title__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Priority__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>Priority_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>Resolution__c</columns>
        <columns>Priority_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Change Request</value>
        </filters>
        <label>Change Requests</label>
    </listViews>
    <listViews>
        <fullName>Developer_Open_Items</fullName>
        <columns>NAME</columns>
        <columns>Functional_Area__c</columns>
        <columns>Status__c</columns>
        <columns>Title__c</columns>
        <columns>Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Description__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Deferred,Duplicate</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Thomas</value>
        </filters>
        <label>Developer Open Items</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Bugs</fullName>
        <columns>NAME</columns>
        <columns>Functional_Area__c</columns>
        <columns>Status__c</columns>
        <columns>Title__c</columns>
        <columns>Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Description__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Corrected - pending confirmation,Resolved,Deferred,Duplicate</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Bug</value>
        </filters>
        <label>My Open Bugs</label>
    </listViews>
    <listViews>
        <fullName>NewforReview</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Priority__c</columns>
        <columns>Description__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>Resolution__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New for Review</label>
    </listViews>
    <listViews>
        <fullName>Open_Items</fullName>
        <columns>NAME</columns>
        <columns>Functional_Area__c</columns>
        <columns>Status__c</columns>
        <columns>Title__c</columns>
        <columns>Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Description__c</columns>
        <columns>Resolution__c</columns>
        <columns>Priority_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Deferred,Duplicate,Not a Bug - working as designed</value>
        </filters>
        <label>Open Items</label>
    </listViews>
    <listViews>
        <fullName>Working</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Working</value>
        </filters>
        <label>Working</label>
    </listViews>
    <nameField>
        <displayFormat>I-{000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>